--- a/package.json
+++ b/package.json
@@ -36,9 +36,6 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "git-pages": "^0.8.1",
     "globals": "^16.5.0",
-    "vite": "npm:rolldown-vite@7.2.2"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.2"
+    "vite": "^7.2.2"
   }
 }
